Bug 130237 - FILESAVE XLSX 3D area chart is exported with wrong Z-axis settings
Summary: FILESAVE XLSX 3D area chart is exported with wrong Z-axis settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-01-28 09:00 UTC by NISZ LibreOffice Team
Modified: 2020-01-29 11:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel. (20.42 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-28 09:01 UTC, NISZ LibreOffice Team
Details
The example file saved by recent Calc master (19.43 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-28 09:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Excel and Calc. (97.36 KB, image/png)
2020-01-28 09:02 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-28 09:00:03 UTC
Description:
Attached example file contains a simple 3D area chart made in Excel.
When this is saved in Calc then reopened in Excel the Z-axis labels are the row labels instead of column labels and there is a large distance between the two area shapes, so much that Excel cuts off a bit from the blue shape.

Steps to Reproduce:
1.Open the attached file in Calc and save it as XLSX.

Actual Results:
The chart has row labels on the Z-axis and large distance between the area shapes.

Expected Results:
The chart should have correct Z-axis labels, and small distance between the area shapes.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-01-28 09:01:16 UTC
Created attachment 157473 [details]
Example file from Excel.
Comment 2 NISZ LibreOffice Team 2020-01-28 09:01:57 UTC
Created attachment 157474 [details]
The example file saved by recent Calc master
Comment 3 NISZ LibreOffice Team 2020-01-28 09:02:25 UTC
Created attachment 157475 [details]
Screenshot of the original and exported document side by side in Excel and Calc.
Comment 4 Balázs Varga 2020-01-28 09:46:26 UTC
Confirmed in:

Version: 6.2.5.2 (x64)
Build ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc:
Comment 5 Commit Notification 2020-01-29 11:03:23 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6df2d48b53946e518a9689c3ea020250652d56be

tdf#130237 OOXML chart export: fix incomplete 3D area chart

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.