tdf#130237 Chart OOXML Export: Fix disappeared 3D Area chart

Dataseries of 3D area charts was "transparent" or partially
disappeared, opening with MS-Office, because we exported
the Z axis as a category axis.
Export 3D areachart Z ("deep") axis properties into
<serAx> xml tag, as the OOXML Standard requires.

Change-Id: If7d8c15aa738cc44c736cd37d2be30d0eb15538f