oox/source/export/chartexport.cxx
@@ -2756,7 +2756,7 @@ void ChartExport::exportAxis(const AxisIdPair& rAxisIdPair)
                 nAxisType = XML_valAx;
             else if( eChartType == chart::TYPEID_STOCK )
                 nAxisType = XML_dateAx;
-            else if( eChartType == chart::TYPEID_BAR )
+            else if( eChartType == chart::TYPEID_BAR || eChartType == chart::TYPEID_AREA )
                 nAxisType = XML_serAx;
             // FIXME: axPos, need to check axis direction
             sAxPos = "b";
